# LinkMySQL

./: .gitignore  README.md
projects/: CMakeLists.txt
projects/src/: interface.cpp
